tests/Tuc/Fixtures/errors/WrongComponentParticipantDomain.tuc
tuc parse error test
participants
    StreamComponent parts
        GenericService
        Service wrongDomain
